// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchNews 1`] = `
Array [
  Array [
    "https://api.hackerwebapp.com/foobar",
    Object {
      "mode": "cors",
    },
  ],
]
`;

exports[`fetchNews 2`] = `
Object {
  "channel": "foobar",
  "isFetching": false,
  "news": "foobar",
}
`;

exports[`fetchNews fails 1`] = `
Object {
  "channel": "foobar",
  "error": [Error: Failed to fetch news! (status: 0)],
  "isFetching": false,
}
`;

exports[`fetchNews fails 2`] = `
Object {
  "channel": "foobar",
  "error": [Error: Failed to fetch news! (status: 123)],
  "isFetching": false,
}
`;
